fixed login modal on mobile

--- a/app/styles/_bootstrap-custom.scss
+++ b/app/styles/_bootstrap-custom.scss
@@ -74,3 +74,7 @@ body.modal-open,
 .modal-open .navbar-fixed-bottom {
   padding-right: 0px !important;
 }
+//fix modal backdrop for mobile
+body.modal-open div.modal-backdrop {
+    z-index: 0;
+}
